verif/test/deca/syntax/invalid/invalid-float1-verif.res
src/test/deca/syntax/invalid/invalid-float1.deca:2:15: no viable alternative at input 'e40'
